hphp/test/slow/parser/hh-reserved-name-self-2.php.expectf
Fatal error: Cannot use `Self` as a type name as it is reserved in %s/test/slow/parser/hh-reserved-name-self-2.php on line 4
